Fixed CTA Spacing on Homepage

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ header {
  header .hero h1 {
    font-size:38px;
    font-weight: lighter;
-   margin:95px 0 0;
+   margin:auto;
  }
  header .hero p {
    font-size: 18px;
@@ -351,14 +351,14 @@ header {
    font-size:38px;
    color: #3A5668;
    font-weight: 100;
-   margin: 50px 0 15px;
+   margin: 15px 15px;
 }
  .BottomCTA p {
    color: #3A5668;
    font-size: 16px;
    line-height: 26px;
    font-weight: 100;
-   margin: 0 10px 40px;
+   margin: 0 10px 30px;
 }
 
 .CTABox {
@@ -366,8 +366,8 @@ header {
     background: #FFFFFF;
     border-radius: 6px;
     box-shadow: 0px 2px 0px rgba(0,0,0,0.20);
-    min-height: 300px;
-    max-width: 550px;
+    height: 210px;
+    width: 450px;
     position: relative;
     margin: auto;
 }
